--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/next": "^5.4.2",
     "@tabler/icons": "^1.101.0",
     "next": "12.3.1",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
