--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "react-input-mask": "^2.0.4"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
