--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.4.2",
+    "@mantine/ds": "^5.5.5",
     "@mantine/form": "^5.5.2",
     "@mantine/hooks": "^5.4.2",
     "@mantine/next": "^5.4.2",
+    "@next-auth/firebase-adapter": "^1.0.2",
     "@tabler/icons": "^1.101.0",
+    "firebase": "^9.12.0",
+    "js-cookie": "^3.0.1",
     "next": "12.3.1",
+    "next-auth": "^4.13.0",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
